--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,5 @@ spring.datasource.password=1234
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 #swagger
-amir.openapi.dev-url=http://localhost:8080
+amir.openapi.dev-url=http://localhost:23234
+server.port=23234
